Add bootstrap css/js
Load from CDN
Remove filler wagtail content

--- a/murasakisite/murasakisite/templates/base.html
+++ b/murasakisite/murasakisite/templates/base.html
@@ -1,7 +1,9 @@
+{% load i18n %}
+{% get_current_language as LANGUAGE_CODE %}
 {% load static wagtailcore_tags wagtailuserbar %}
+<!doctype html>
+<html lang="{{ LANGUAGE_CODE }}">
 
-<!DOCTYPE html>
-<html lang="en">
     <head>
         <meta charset="utf-8" />
         <title>
@@ -25,6 +27,7 @@
 
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/murasakisite.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
@@ -38,9 +41,11 @@
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/murasakisite.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
         {% endblock %}
+
     </body>
 </html>
