--- a/murasakisite/murasakisite/templates/base.html
+++ b/murasakisite/murasakisite/templates/base.html
@@ -47,5 +47,6 @@
         {# Override this in templates to add extra javascript #}
         {% endblock %}
 
+    <p><span>Copyright &copy; Murasaki. </span></p>
     </body>
 </html>
