--- a/murasakisite/tour/templates/tour/tour_index_page.html
+++ b/murasakisite/tour/templates/tour/tour_index_page.html
@@ -6,6 +6,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
+            <h1>{{ page.title }}</h1>
+        </div>
+        <div class="col-md-12">
             {{ page.intro|richtext }} 
         </div>
     </div>  
