--- a/murasaki/pages/templates/pages/news.html
+++ b/murasaki/pages/templates/pages/news.html
@@ -40,6 +40,7 @@
         {% endfor %}
     {# navigation #}
 
+    {# navigation #}
 <div class="row">
 <nav aria-label="Page navigation" style="margin-top: 20px;">
   <ul class="pagination">
