Add dropdown media menu to navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/murasaki.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 
         {% block extra_js %}
             {# Override this in templates to add extra javascript #}
