Add skeleton views for photos/videos pages

--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -76,14 +76,14 @@
                         <li>
                             <a
                                 class="dropdown-item"
-                                href="#"
+                                href="/{{ LANGUAGE_CODE }}/gallery/photos/"
                                 style="color: #dff04a"
                             >{{ _('Photos') }}</a>
                         </li>
                         <li>
                             <a
                                 class="dropdown-item"
-                                href="#"
+                                href="/{{ LANGUAGE_CODE }}/gallery/videos/"
                                 style="color: #dff04a"
                             >{{ _('Videos') }}</a>
                         </li>
