Fix alt text of images

--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -43,7 +43,7 @@
         <div class="col-md-3 col-sm-6 col-xs-12 center-block text-center">
             <a href="{{ news.get_absolute_url }}">
                 <img
-                        alt="AltText"
+                        alt="{{ news.title }}"
                         src="{{ news.image.url }}"
                         class="img-fluid"
                         style="height: 200px; width: auto;"
