--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        {# Favicon #}
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/murasaki.css' %}">
