--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -72,19 +72,19 @@
                         {{ _('Media') }}
                     </a>
                     {# Links to photos and videos #}
-                    <ul class="dropdown-menu" style="background-color: #520b5e">
+                    <ul class="dropdown-menu" style="background-color: #dff04a">
                         <li>
                             <a
                                 class="dropdown-item"
                                 href="/{{ LANGUAGE_CODE }}/gallery/photos/"
-                                style="color: #dff04a"
+                                style="color: #520b5e""
                             >{{ _('Photos') }}</a>
                         </li>
                         <li>
                             <a
                                 class="dropdown-item"
                                 href="/{{ LANGUAGE_CODE }}/gallery/videos/"
-                                style="color: #dff04a"
+                                style="color: #520b5e"
                             >{{ _('Videos') }}</a>
                         </li>
                     </ul>
